update:文章详情页

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.6",
+    "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6"
   },
