--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/proxy": "^2.0.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.9.6",
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-cookie": "^1.1.4"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2",
