--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lodash": "^4.17.20",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
-    "vue-cookie": "^1.1.4"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2",
