--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.9.6",
     "lodash": "^4.17.20",
+    "material-design-icons-iconfont": "^6.1.0",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
     "vuex": "^3.5.1"
