--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-design-icons-iconfont": "^6.1.0",
     "node-sass": "^5.0.0",
     "nuxt": "^2.14.6",
+    "vue-cookies": "^1.7.4",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
