--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.19.0",
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.9.6",
