--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@editorjs/marker": "^1.2.2",
     "@editorjs/simple-image": "^1.4.0",
     "@nuxtjs/axios": "^5.12.2",
+    "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.9.6",
     "lodash": "^4.17.20",
